--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	</head>
 	<body data-spy="scroll" data-target="#navbar-example">	 
 		<div >
-			<div style="color: white; font-family: 'Courier New', Courier, monospace; font-size: 40px; text-align: center; padding: 20px; background-color: rgb(34, 34, 34);"><img style="width: 100px; padding: 0px;" src="view/images/logoABWhiteTransparent.png"> <em>Asim Bhatia</em></div>
+			<div style="color: white; font-family: 'Courier New', Courier, monospace; font-size: 40px; text-align: center; padding: 20px; background-color: rgb(34, 34, 34);"> <em>//My Portfolio</em></div>
 		</div>
 
 		
@@ -75,6 +75,7 @@
 					<li><a href=#profile>Profile</a></li>
 					<li><a href=#experiences>Experience</a></li>
 					<li><a href=#contact>Contact</a></li>
+					<img style="display: block; width: 34px; padding: 0px; margin-right: 20px; float: right;" src="view/images/logoABWhiteTransparent.png">
 				</ul>
 			</nav>
 		</header>
@@ -312,6 +313,7 @@
 		
 		<div class="background-black">
 			<div id="contact" class="container">
+				<div class="wow fadeIn">
 				<h2>Contact</h2>
 <p class="lead" style="color: #c28aff;">
 	<!-- &ldquo;Li'l Kodak they don't like to see you winnin',
@@ -359,7 +361,7 @@
 
 <img style="display: block; width: 100px; margin-left: auto; margin-right: auto; padding-top: 40px; padding-top: 40px;" src="view/images/logoABWhiteTransparent.png">
 
-
+				</div>
 			</div>
 		</div>
 		
