--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	</head>
 	<body data-spy="scroll" data-target="#navbar-example">	 
 		<div >
-			<div style="color: white; font-family: 'Courier New', Courier, monospace; font-size: 40px; text-align: center; padding: 20px; background-color: rgb(34, 34, 34);"> <em>//My Portfolio</em></div>
+			<div id="top" style="color: white; font-family: 'Courier New', Courier, monospace; font-size: 40px; text-align: center; padding: 20px; background-color: rgb(34, 34, 34);"> <em>//My Portfolio</em></div>
 		</div>
 
 		
@@ -75,7 +75,7 @@
 					<li><a href=#profile>Profile</a></li>
 					<li><a href=#experiences>Experience</a></li>
 					<li><a href=#contact>Contact</a></li>
-					<img style="display: block; width: 34px; padding: 0px; margin-right: 20px; float: right;" src="view/images/logoABWhiteTransparent.png">
+					<a href=#top><img style="display: block; width: 34px; padding: 0px; margin-right: 20px; float: right;" src="view/images/logoABWhiteTransparent.png"></a>
 				</ul>
 			</nav>
 		</header>
@@ -86,43 +86,11 @@
 			<div class="overlay"></div>
 			<!--<div class="overlayPurple"></div>-->
 			<div class="container">
-				<h1  class ="fade-scroll">Asim Bhatia</h1>
-				<p style="padding-bottom: 400px;" class ="fade-scroll" class="lead">Visionary</p>
+				<h1  class ="colorPrint">Asim Bhatia</h1>
+				<p style="padding-bottom: 400px;" class ="colorPrint" class="lead">Visionary</p>
 			</div>
-			
-		
-			
-			<!--<a href="#profile" class="scroll-down">	
-				<span class="glyphicon glyphicon-chevron-down"></span>
-			</a>-->
 		</div>
 
-		
-		
-
-		
-		<!--<nav class="navbar navbar-default" id="navbar-example" role="navigation">
-			
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-			</div>
-
-			
-			<div class="collapse navbar-collapse navbar-ex1-collapse">
-				<ul class="nav navbar-nav">
-					<li class="active"><a href="#profile">Profile</a></li>
-					<li><a href="#experiences">Experiences</a></li>
-					<li><a href="#abilities">Abilities</a></li>
-										<li><a href="#projects">Projects</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
-			</div>
-		</nav>-->
 		
 		<div style="padding-top: 50px; padding-bottom: 50px; display: flex-inline" class="background-white">
 			<div style="display: block" id="profile" class="container">
