--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
 
 <hr style="clear: none; padding: 0%; margin: 0%;">
 
-<div class="row wow fadeInUp" style="padding-top: 50px;">
+<div class="row wow fadeInUp" style="padding-top: 50px; text-align: center;">
 	<div class="col-md-3">
 		<h3>About me</h3>
 		<p>I recently graduated from highschool and am currently a student attending Waterloo University, pursuing a bachelor's degree in Software Engineering.</p>
 	</div>
 	
-	<div class="col-md-3">
+	<div  class="col-md-3">
 		<h3>Details</h3>
 		<p>
 			<strong>Name:</strong><br />
