--- a/index.html
+++ b/index.html
@@ -83,12 +83,14 @@
 	<!-- <hr style="margin-top: 0px; padding: 0px;"> -->
 
 		<div id="top" class="jumbotron" data-src="/view/images/metro_animation.gif" data-position="center right">
-			<div class="overlay"></div>
+			<div class="overlay">
+				<div class="container">
+					<h1  class ="colorPrint">Asim Bhatia</h1>
+					<p style="padding-bottom: 400px;" class ="colorPrint" class="lead">Visionary</p>
+				</div>
+			</div> 
+			<!-- //this is the ovelay for background.gif -->
 			<!--<div class="overlayPurple"></div>-->
-			<div class="container">
-				<h1  class ="colorPrint">Asim Bhatia</h1>
-				<p style="padding-bottom: 400px;" class ="colorPrint" class="lead">Visionary</p>
-			</div>
 		</div>
 
 		
