--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 			
 		<title>Asim Bhatia Portfolio</title>
-		
+		<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap" rel="stylesheet">
 		<!-- Bootstrap core CSS -->
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css" />
 		<link href="view/css/bootstrap.min.css" rel="stylesheet" />
@@ -84,9 +84,9 @@
 
 		<div id="top" class="jumbotron" data-src="/view/images/metro_animation.gif" data-position="center right">
 			<div class="overlay">
-				<div class="container">
-					<h1  class ="colorPrint">Asim Bhatia</h1>
-					<p style="padding-bottom: 400px;" class ="colorPrint" class="lead">Visionary</p>
+				<div class="container" style="font-family: 'Montserrat', sans-serif;">
+					<h1 style="font-family: 'Montserrat', sans-serif;" class ="colorPrint">Asim Bhatia</h1>
+					<p style="padding-bottom: 400px; font-family: 'Montserrat', sans-serif;" class ="colorPrint" class="lead">Visionary</p>
 				</div>
 			</div> 
 			<!-- //this is the ovelay for background.gif -->
