--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 		
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
 
 		<!--[if lt IE 9]>
 			<script src="/view/js/html5shiv.js"></script>
@@ -64,7 +64,7 @@
 	</head>
 	<body data-spy="scroll" data-target="#navbar-example">	 
 		<div >
-			<div id="top" style="color: white; font-family: 'Courier New', Courier, monospace; font-size: 40px; text-align: center; padding: 20px; background-color: rgb(34, 34, 34);"> <em>//My Portfolio</em></div>
+			<div id="top" style="color: white; font-family: 'Courier New', Courier, monospace; font-size: 40px; text-align: center; padding: 20px; background-color: rgb(34, 34, 34);"> <span id="cursor" class="text-monospace"><em>//My Portfolio</em></span></div>
 		</div>
 
 		
@@ -85,7 +85,7 @@
 		<div id="top" class="jumbotron" data-src="/view/images/metro_animation.gif" data-position="center right">
 			<div class="overlay">
 				<div class="container" style="font-family: 'Montserrat', sans-serif;">
-					<h1 style="font-family: 'Montserrat', sans-serif;" class ="colorPrint">Asim Bhatia</h1>
+					<h1 style="font-family: 'Montserrat', sans-serif; font-size: 8vw; text-transform: uppercase; font-weight: bolder;" class ="colorPrint">Asim Bhatia</h1>
 					<p style="padding-bottom: 400px; font-family: 'Montserrat', sans-serif;" class ="colorPrint" class="lead">Visionary</p>
 				</div>
 			</div> 
@@ -106,7 +106,7 @@
 		<!--<img style=" width: 200px; padding:0%; margin: 0%; display: inline" src="https://media.giphy.com/media/w9av4NDxw12d88brXc/giphy.gif">-->
 	</div>
 	<div class="col-md-3" style="padding: 0%; margin: 0%;">
-		<img style="width: 130px; float: right; padding:0%; margin: 0%; display: inline; border-radius: 50%; border: #c28aff;" src="view/images/profilePic.png">
+		<img style="width: 130px; float: right; padding:0%; margin: 0%; display: inline; border-radius: 50%; border-width: 7px; border-color: #c28aff; border-style: solid;" src="view/images/profilePic.png">
 	</div>
 </div>
 
