--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
 <hr>
 
-<img style="display: block; width: 100px; margin-left: auto; margin-right: auto; padding-top: 40px; padding-top: 40px;" src="view/images/logoABWhiteTransparent.png">
+<a href="#top"><img style="display: block; width: 100px; margin-left: auto; margin-right: auto; padding-top: 40px; padding-top: 40px;" src="view/images/logoABWhiteTransparent.png"></a>
 
 				</div>
 			</div>
