--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 			<nav>
 				<ul class="nav_links"> <strong><span style="left: 0px; text-align: left; padding: 10px 0px; padding-right: 50px; font-family: 'Courier New', Courier, monospace; padding-left: 0px;">Directory</span></strong>
 					<li><a href=#profile>Profile</a></li>
+					<li><a href=#projects>Projects</a></li>
 					<li><a href=#experiences>Experience</a></li>
 					<li><a href=#contact>Contact</a></li>
 					<a href=#top><img style="display: block; width: 34px; padding: 0px; margin-right: 20px; float: right;" src="view/images/logoABWhiteTransparent.png"></a>
@@ -94,11 +95,11 @@
 		</div>
 
 		
-		<div style="padding-top: 50px; padding-bottom: 50px; display: flex-inline" class="background-white">
+		<div style=" padding-bottom: 50px; display: flex-inline" class="background-white">
 			<div style="display: block" id="profile" class="container">
 <div class="row wow zoomIn" style="padding: 0%; padding-bottom: 20px; margin: 0%;">
 	<div class="col-md-5" style="padding: 0%; margin: 0%;">
-		<h2 class="wow zoomIn" style=" text-align: left">Profile</h2>
+		<h2 class="wow zoomIn" style="padding-top: 40px; text-align: left">Profile</h2>
 			<p class="wow zoomIn lead" style="color: #c28aff; text-align: left">Undergraduate Student</p>
 
 	</div>
@@ -156,6 +157,63 @@
 </div>			</div>	
 		</div>	
 	</div>
+
+
+
+
+
+<div class="background-lightgray">
+	<div id="projects" class="container ">
+			<div style="background-color: white;" class="wow zoomIn">
+		<h2 style="padding-top:20px;">Projects</h2>
+<p class="lead" style="padding-bottom:20px;"> Some Cool Stuff I've Done<br />
+</p>
+			</div>
+<hr style="border-color: black; border-width: 5px;">
+
+<!-- <hr style="color: black;"> -->
+
+<div class="row">
+
+	
+<div class="col-md-6 col-sm-12 col-xs-12 wow fadeInUp">
+	<figure class="effect">
+		<img src="view/images/DodgeballMadness.png"/>
+		
+		<figcaption>
+			<h3>DODGEBALL MADNESS</h3>
+			<p>Fun and Interactive Virtual Dodgeball Game</p>
+			<p><strong>Used: </strong> <br />Object-Oriented programming, Java, Mouse Input, Key Input</p>
+			<a href="https://github.com/AsimBhatia/Dodgeball" target="_blank">View more</a>
+			<span class="icon">
+				<span class="glyphicon glyphicon-new-window"></span>
+			</span>
+		</figcaption> 
+	</figure>
+</div>
+
+	
+<div class="col-md-6 col-sm-12 col-xs-12 wow fadeInUp">
+	<figure class="effect">
+		<img src="view/images/tangible_scroll.gif"/>
+		
+		<figcaption>
+			<h3>TANGIBLE</h3>
+			<p>Ultrasonic Touch Screen Apparatus</p>
+			<p><strong>Used: </strong> <br />C++, Arduino, Java, Unity</p>
+			<a href="https://github.com/AsimBhatia/Tangible" target="_blank">View more</a>
+			<span class="icon">
+				<span class="glyphicon glyphicon-new-window"></span>
+			</span>
+		</figcaption> 
+	</figure>
+</div>
+
+	
+</div>
+
+	</div>
+</div>
 
 
 
@@ -336,6 +394,26 @@
 		</div>
 		
 			
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+		
 
 		<!-- Bootstrap core JavaScript -->
 		<script type="text/javascript" src="ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
