new project background

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 
 
-<div class="background-lightgray">
+<div class="projectBack">
 	<div id="projects" class="container ">
 			<div style="background-color: white;" class="wow zoomIn">
 		<h2 style="padding-top:20px;">Projects</h2>
