--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 	<div class="col-md-4" style="padding: 0%; margin: 0%;">
 		<!--<img style=" width: 200px; padding:0%; margin: 0%; display: inline" src="https://media.giphy.com/media/w9av4NDxw12d88brXc/giphy.gif">-->
 	</div>
-	<div class="col-md-3" style="padding: 0%; margin: 0%;">
-		<img style="width: 130px; float: right; padding:0%; margin: 0%; display: inline; border-radius: 50%; border-width: 7px; border-color: #c28aff; border-style: solid;" src="view/images/profilePic.png">
+	<div class="col-md-3" style="padding: 0%; margin: 0%; padding-top: 30px;">
+		<img class="shadow" style="width: 130px; float: right; padding:0%; margin: 0%; display: inline; border-radius: 50%; border-width: 7px; border-color: #c28aff; border-style: solid;" src="view/images/profilePic.png">
 	</div>
 </div>
 
@@ -163,10 +163,12 @@
 
 
 <div class="projectBack">
-	<div id="projects" class="container ">
-			<div style="background-color: white;" class="wow zoomIn">
+	<!-- <div class="overlayGradient">
+	</div> -->
+	<div id="projects" class="container overlayGradient">
+			<div style="background-color: white;" class="wow zoomIn shadow">
 		<h2 style="padding-top:20px;">Projects</h2>
-<p class="lead" style="padding-bottom:20px;"> Some Cool Stuff I've Done<br />
+<p class="lead" style="padding-bottom:20px; color: #c28aff;"> Some Cool Stuff I've Done<br />
 </p>
 			</div>
 <hr style="border-color: black; border-width: 5px;">
@@ -175,8 +177,9 @@
 
 <div class="row">
 
-	
-<div class="col-md-6 col-sm-12 col-xs-12 wow fadeInUp">
+	<!-- style="padding-right: 0%; padding-left: 0%; margin-right: 15px;" -->
+<div class="col-md-6 col-sm-12 col-xs-12 wow fadeInUp" >
+	<div class="shadow">
 	<figure class="effect">
 		<img src="view/images/DodgeballMadness.png"/>
 		
@@ -190,10 +193,12 @@
 			</span>
 		</figcaption> 
 	</figure>
+	</div>
 </div>
 
 	
 <div class="col-md-6 col-sm-12 col-xs-12 wow fadeInUp">
+	<div class="shadow">
 	<figure class="effect">
 		<img src="view/images/tangible_scroll.gif"/>
 		
@@ -207,10 +212,12 @@
 			</span>
 		</figcaption> 
 	</figure>
+	</div>
 </div>
 
 	
 </div>
+
 
 	</div>
 </div>
@@ -219,7 +226,7 @@
 
 			<div >
 		<div id="experiences" class="container" style="color: rgb(255, 255, 255);">
-			<h2 style="color: rgb(255, 255, 255); text-align: left;">Experience</h2>
+			<h2 style="color: rgb(255, 255, 255); text-align: left;" class="textShadow">Experience</h2>
 <p class="lead" style="color: #c28aff; text-align: left;">
 	What I Do
 </p>
