images on profile and arrow animation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 
 	<title>Asim Bhatia Portfolio</title>
+	<!-- <script src="https://code.jquery.com/jquery-3.3.1.js"></script>  -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap" rel="stylesheet">
 	<!-- Bootstrap core CSS -->
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css" />
@@ -94,8 +95,29 @@
 
 
 
+	<!-- <div class="menu">
+		<span class="toggle">
+			<i></i>
+			<i></i>
+			<i></i>
+		</span>
+		<div class="menucontent">
+			<ul>
+				<li>Profile</li>
+				<li>Projects</li>
+				<li>Experience</li>
+				<li>Contact</li>
+			</ul>
+		</div>
+	</div>
 
-
+	<script>
+	
+	$('toggle').on('click', function(){
+		$('.menu').toggleClass('active');
+	});
+	
+	</script> -->
 
 
 
@@ -119,15 +141,20 @@
 	<div style=" padding-bottom: 50px; display: flex-inline" class="background-white">
 		<div style="display: block" id="profile" class="container">
 			<div class="row wow zoomIn" style="padding: 0%; padding-bottom: 20px; margin: 0%;">
-				<div class="col-md-5" style="padding: 0%; margin: 0%;">
+				<div class="col-md-4" style="padding: 0%; margin: 0%;">
 					<h2 class="wow zoomIn" style="padding-top: 40px; text-align: left">Profile</h2>
 					<p class="wow zoomIn lead" style="color: #c28aff; text-align: left">Undergraduate Student</p>
 
 				</div>
 				<div class="col-md-4" style="padding: 0%; margin: 0%;">
-					<!--<img style=" width: 200px; padding:0%; margin: 0%; display: inline" src="https://media.giphy.com/media/w9av4NDxw12d88brXc/giphy.gif">-->
+					<div style="font-weight: bold;" class="words words-1" style=" text-align: center; bottom: 0%;">
+						<span>></span>
+						<span>></span>
+						<span>></span>
+						<span>></span>
+					</div>
 				</div>
-				<div class="col-md-3" style="padding: 0%; margin: 0%; padding-top: 30px;">
+				<div class="col-md-4" style="padding: 0%; margin: 0%; padding-top: 30px;">
 					<img class="shadow"
 						style="width: 130px; float: right; padding:0%; margin: 0%; display: inline; border-radius: 50%; border-width: 7px; border-color: #c28aff; border-style: solid;"
 						src="view/images/profilePic.png">
@@ -179,9 +206,23 @@
 			<div class="text-center">
 
 			</div>
+			<div>
+				<img class="wow rubberBand" style="display: block; float: left; width: 10vw;" src="view/images/lamp.png">
+				<img class="wow rubberBand" style="display: block; float: right; width: 10vw;" src="view/images/soccer.png">
+				<img class="wow rubberBand" style="display: block; margin-left: auto; margin-right: auto; width: 12vw;" src="view/images/laptop.png">
+			</div>
 		</div>
+		
 	</div>
 	</div>
+
+
+
+
+
+
+
+
 
 
 
@@ -463,6 +504,7 @@
 
 	<!-- Bootstrap core JavaScript -->
 	<script type="text/javascript" src="ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+</script>
 	<script type="text/javascript" src="view/js/script.js"></script>
 	<script type="text/javascript" src="view/js/bootstrap.min.js"></script>
 
