--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+	<link href="https://fonts.googleapis.com/css?family=Dosis:300,400,700" rel="stylesheet" />
+	<!-- <link rel="stylesheet" href="style.css"> -->
 
 	<title>Asim Bhatia Portfolio</title>
 	<!-- <script src="https://code.jquery.com/jquery-3.3.1.js"></script>  -->
@@ -66,16 +72,51 @@
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example">
+
+	<!-- <div class="containerBar"> -->
+		<nav class="navbarBar" style="z-index: 999;">
+			<div class="hamburger-menu">
+				<div class="line line-1"></div>
+				<div class="line line-2"></div>
+				<div class="line line-3"></div>
+			</div>
+
+			<ul style="text-decoration: none" class="nav_links">
+				<li  class="nav-item">
+					<a  href="#top" class="nav-link">Home</a>
+				</li>
+				<li class="nav-item">
+					<a href="#profile" class="nav-link">Profile</a>
+				</li>
+				<li class="nav-item">
+					<a href="#projects" class="nav-link">Projects</a>
+				</li>
+				<li class="nav-item">
+					<a href="#experiences" class="nav-link">Experiences</a>
+				</li>
+				<li class="nav-item">
+					<a href="#contact" class="nav-link">Contact</a>
+				</li>
+			</ul>
+
+		</nav>
+	<!-- </div> -->
+
+	<!-- TIME SLOT LEFT OFF AT 3:34 (starting the CSS part now)  -->
+
+	<script src="script.js"></script>
+	<!-- MAYBE TOP LINE NOT NEEDED ^^^^^ -->
+
 	<div>
 		<div id="top"
-			style="color: white; font-family: 'Courier New', Courier, monospace; font-size: 40px; text-align: center; padding: 20px; background-color: rgb(34, 34, 34);">
+			style=" color: white; font-family: 'Courier New', Courier, monospace; font-size: 40px; text-align: center; padding: 30px; background-color: rgb(34, 34, 34); border-width: 10px; border-color: black;">
 			<span id="cursor" class="text-monospace"><em>//My Portfolio</em></span></div>
 	</div>
 
 
 
 
-	<header
+	<!-- <header
 		style="border-style: solid; border-color: #c28aff; border-top: none; border-right: none; border-left: none; position: sticky; padding-left: 0px; padding-right: 0px; display: block; width: 100%; background-color: black; z-index: 100; top: 0px; padding-top: 9px; padding-bottom: 1px; margin-bottom: 0px;">
 
 		<nav>
@@ -89,7 +130,11 @@
 						src="view/images/logoABWhiteTransparent.png"></a>
 			</ul>
 		</nav>
-	</header>
+	</header> -->
+
+
+	<!-- hamburger menu side bar -->
+
 
 
 
@@ -159,6 +204,26 @@
 						style="width: 130px; float: right; padding:0%; margin: 0%; display: inline; border-radius: 50%; border-width: 7px; border-color: #c28aff; border-style: solid;"
 						src="view/images/profilePic.png">
 				</div>
+
+
+				<!-- <div class="col-md-8" style="padding: 0%; margin: 0%;">
+					<div style="display: flex;">
+						<h2 class="wow zoomIn" style="padding-top: 40px; text-align: left">Profile</h2>
+						<p class="wow zoomIn lead" style="color: #c28aff; text-align: left">Undergraduate Student</p>
+					</div>
+					<div style="display:flex; justify-content: center; font-weight: bold;" class="words words-1" style=" text-align: center;">
+						<span>></span>
+						<span>></span>
+						<span>></span>
+						<span>></span>
+					</div>
+					<img class="shadow"
+						style="width: 130px; float: right; padding:0%; margin: 0%; display: inline; border-radius: 50%; border-width: 7px; border-color: #c28aff; border-style: solid;"
+						src="view/images/profilePic.png">
+				</div> -->
+
+
+
 			</div>
 
 
