changed top wording size to vw instead of px

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 	<div>
 		<div id="top"
-			style=" color: white; font-family: 'Courier New', Courier, monospace; font-size: 40px; text-align: center; padding: 30px; background-color: rgb(34, 34, 34); border-width: 10px; border-color: black;">
+			style=" color: white; font-family: 'Courier New', Courier, monospace; font-size: 3vw; text-align: center; padding: 30px; background-color: rgb(34, 34, 34); border-width: 10px; border-color: black;">
 			<span id="cursor" class="text-monospace"><em>//My Portfolio</em></span></div>
 	</div>
 
