change font size

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 	<div>
 		<div id="top"
-			style=" color: white; font-family: 'Courier New', Courier, monospace; font-size: 3vw; text-align: center; padding: 30px; background-color: rgb(34, 34, 34); border-width: 10px; border-color: black;">
+			style=" color: white; font-family: 'Courier New', Courier, monospace; font-size: 4vw; text-align: center; padding: 30px; background-color: rgb(34, 34, 34); border-width: 10px; border-color: black;">
 			<span id="cursor" class="text-monospace"><em>//My Portfolio</em></span></div>
 	</div>
 
@@ -174,7 +174,7 @@
 			<div class="container" style="font-family: 'Montserrat', sans-serif;">
 				<h1 style="font-family: 'Montserrat', sans-serif; font-size: 8vw; text-transform: uppercase; font-weight: bold;"
 					class="colorPrint">Asim Bhatia</h1>
-				<p style="padding-bottom: 400px; font-family: 'Montserrat', sans-serif;" class="colorPrint"
+				<p style="padding-bottom: 400px; font-size: 3vw; font-family: 'Montserrat', sans-serif;" class="colorPrint"
 					class="lead">Visionary</p>
 			</div>
 		</div>
