deleted .js intail statement

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<!-- PONCHO top are suspects possibly or the one line below -->
 
 	<link href="https://fonts.googleapis.com/css?family=Dosis:300,400,700" rel="stylesheet" />
 	<!-- <link rel="stylesheet" href="style.css"> -->
@@ -102,18 +103,16 @@
 		</nav>
 	<!-- </div> -->
 
-	<!-- TIME SLOT LEFT OFF AT 3:34 (starting the CSS part now)  -->
-
-	<script src="script.js"></script>
+	<!-- <script src="script.js"></script> -->
 	<!-- MAYBE TOP LINE NOT NEEDED ^^^^^ -->
 
 	<div>
 		<div id="top"
-			style=" color: white; font-family: 'Courier New', Courier, monospace; font-size: 4vw; text-align: center; padding: 30px; background-color: rgb(34, 34, 34); border-width: 10px; border-color: black;">
+			style=" color: white; font-family: 'Courier New', Courier, monospace; font-size: 4vw ; text-align: center; padding: 30px; background-color: rgb(34, 34, 34); border-width: 10px; border-color: black;">
 			<span id="cursor" class="text-monospace"><em>//My Portfolio</em></span></div>
 	</div>
 
-
+	<!-- PONCHO change font-size back to 40px -->
 
 
 	<!-- <header
@@ -178,6 +177,7 @@
 					class="lead">Visionary</p>
 			</div>
 		</div>
+
 		<!-- //this is the ovelay for background.gif -->
 		<!--<div class="overlayPurple"></div>-->
 	</div>
