--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<!-- <meta charset="UTF-8" /> -->
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+	<!-- <meta http-equiv="X-UA-Compatible" content="ie=edge" /> -->
 	<!-- PONCHO top are suspects possibly or the one line below -->
 
-	<link href="https://fonts.googleapis.com/css?family=Dosis:300,400,700" rel="stylesheet" />
+	<!-- <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,700" rel="stylesheet" /> -->
 	<!-- <link rel="stylesheet" href="style.css"> -->
 
 	<title>Asim Bhatia Portfolio</title>
