--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
 
 
 	<div id="top" class="jumbotron" data-src="/view/images/metro_animation.gif" data-position="center right">
-		<img style="width: 7vw; display: block; float: left; margin: 20px; z-index: 100; position: absolute;"
-			src="view/images/logoABWhiteTransparent.png">
+		<a href="https://asimbhatia.me/"><img style="width: 5vw; display: block; float: left; margin: 40px; z-index: 100; position: absolute;"
+			src="view/images/logoABWhiteTransparent.png"></a>
 		<div class="overlay">
 			<div class="container" style="font-family: 'Montserrat', sans-serif;">
 				<h1 style=" font-family: 'Montserrat', sans-serif; font-size: 8vw; text-transform: uppercase; font-weight: bold;"
@@ -248,7 +248,7 @@
 						<span>></span>
 					</div>
 					<img class="shadow"
-						style="width: 130px; float: right; padding:0%; margin: 0%; display: inline; border-radius: 50%; border-width: 7px; border-color: #c28aff; border-style: solid;"
+						style="width: 13vw; float: right; padding:0%; margin: 0%; display: inline; border-radius: 50%; border-width: .7vw; border-color: #c28aff; border-style: solid;"
 						src="view/images/profilePic.png">
 				</div>
 				<p class="lead" style="color: #c28aff; text-align: left; width: fit-content; display:block; clear: both;" >
