changed profile part

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 					class="colorPrint">Asim Bhatia</h1>
 				<!-- <p style=" padding-top: 50px;">//<span id="cursor" class="text-monospace textstyle" style="font-size: 1.7vw;"></span></p> -->
 				<p class="textstyle shadowMiddle"
-					style="font-size: 1.5vw; text-align: center; margin-left: auto; margin-right: auto; width: 33%; margin-top: 50px;">
+					style="font-size: 1.5vw; text-align: center; margin-left: auto; margin-right: auto; margin-top: 50px;">
 					<span style="color: rgb(255, 255, 255);">I am a </span><span class="typed-text"
 						style="font-size: 1.5vw; color: #c28aff;"></span><span class="cursor"
 						style="font-size: 1vw;">&nbsp;</span></p>
@@ -234,7 +234,7 @@
 
 				<div style="padding: 0%; margin: 0%; display: inline;">
 					<div style="display: inline">
-						<h2 style="padding-top: 40px; text-align: left; width: fit-content; display: inline;  padding-right: 100px;">
+						<h2 style="padding-top: 40px; text-align: left; width: fit-content; display: inline;  padding-right: 2vw; float: initial;">
 							Profile
 						</h2>
 						
@@ -251,7 +251,7 @@
 						style="width: 13vw; float: right; padding:0%; margin: 0%; display: inline; border-radius: 50%; border-width: .7vw; border-color: #c28aff; border-style: solid;"
 						src="view/images/profilePic.png">
 				</div>
-				<p class="lead" style="color: #c28aff; text-align: left; width: fit-content; display:block; clear: both;" >
+				<p class="lead" style="color: #c28aff; text-align: left; width: fit-content; display:block; clear: left;" >
 					Undergraduate
 					Student
 				</p>
