new dodgeball image

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 					<div class="col-md-6 col-sm-12 col-xs-12 wow fadeInUp">
 						<div class="shadow">
 							<figure class="effect">
-								<img src="view/images/DodgeballMadness.png" />
+								<img src="view/images/DodgeballMadness.gif" />
 
 								<figcaption>
 									<h3>DODGEBALL MADNESS</h3>
