--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+
+	<link rel="stylesheet" href="/dist/sal.css">
 	<!-- <meta charset="UTF-8" /> -->
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
 	<!-- <meta http-equiv="X-UA-Compatible" content="ie=edge" /> -->
@@ -74,8 +76,18 @@
 
 <body data-spy="scroll" data-target="#navbar-example">
 
+
 	<!-- <div class="containerBar"> -->
 
+	<section>
+		<h1
+			data-sal-duration="1200"
+			data-sal="slide-up"
+			data-sal-delay="300"
+			data-sal-easing="ease-out-bounce">
+			Scroll fade time
+		</h1>
+	</section>
 
 	<nav class="navbarBar" style="z-index: 999;">
 		<div class="hamburger-menu">
