--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
 	<div class="background-black">
 		<div id="contact" class="container" data-sal-duration="1200" data-sal="fade" data-sal-delay="300" data-sal-easing="ease-in-bounce">
 			<div>
-				<h2>Contact</h2class="wow fadeIn">
+				<h2>Contact</h2>
 					<p class="lead wow fadeIn" style="color: #c28aff;">
 						<!-- &ldquo;Li'l Kodak they don't like to see you winnin',
 	they wanna see you in a penitentiary &rdquo;<br />- Kodak Black -->
