--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<script>
 		new WOW().init();
 	</script>
-	<link rel="stylesheet" href="./node_modules/sal.js/dist/sal.css">
+	<link rel="stylesheet" href="node_modules/sal.js/dist/sal.css">
 
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -625,7 +625,7 @@
 	<script type="text/javascript" src="view/js/script.js"></script>
 	<script type="text/javascript" src="view/js/bootstrap.min.js"></script>
 
-	<script src="./node_modules/sal.js/dist/sal.js">
+	<script src="node_modules/sal.js/dist/sal.js">
 	</script>
 	<script>
 		sal({
