--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 	<script>
 		new WOW().init();
 	</script>
-	<link rel="stylesheet" href="node_modules/sal.js/dist/sal.css">
+	<link rel="stylesheet" href="node_modules\sal.js/dist/sal.css">
+	<!-- C:\Users\Acim\Documents\Asim\HTML\OnlineWebsite\node_modules\sal.js\dist\sal.js -->
 
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -625,7 +626,7 @@
 	<script type="text/javascript" src="view/js/script.js"></script>
 	<script type="text/javascript" src="view/js/bootstrap.min.js"></script>
 
-	<script type="text/javascript" src="node_modules/sal.js/dist/sal.js"></script>
+	<script type="text/javascript" src="node_modules\sal.js/dist/sal.js"></script>
 	<script>
 		sal({
 			threshold: 0.5,
