--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<script>
 		new WOW().init();
 	</script>
-	<link rel="stylesheet" href="node_modules\sal.js/dist/sal.css">
+	<link rel="stylesheet" href="node_modules/sal.js/dist/sal.css">
 	<!-- C:\Users\Acim\Documents\Asim\HTML\OnlineWebsite\node_modules\sal.js\dist\sal.js -->
 
 
@@ -626,7 +626,7 @@
 	<script type="text/javascript" src="view/js/script.js"></script>
 	<script type="text/javascript" src="view/js/bootstrap.min.js"></script>
 
-	<script type="text/javascript" src="node_modules\sal.js/dist/sal.js"></script>
+	<!-- <script type="text/javascript" src="node_modules/sal.js/dist/sal.js"></script> -->
 	<script>
 		sal({
 			threshold: 0.5,
