--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
 	<script type="text/javascript" src="view/js/script.js"></script>
 	<script type="text/javascript" src="view/js/bootstrap.min.js"></script>
 
-	<!-- <script type="text/javascript" src="node_modules/sal.js/dist/sal.js"></script> -->
+	<script type="text/javascript" src="node_modules/sal.js/dist/sal.js"></script>
 	<script>
 		sal({
 			threshold: 0.5,
