--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
 
 
 
-	<div style=" padding-bottom: 50px;" class="background-white shadowWhite">
-		<div style="display: block" id="profile" class="container" data-sal-duration="1200" data-sal="fade" data-sal-delay="300" data-sal-easing="ease-in-bounce">
+	<div id="profile" style=" padding-bottom: 50px; z-index: 100;" class="background-white shadowWhite">
+		<div style="display: block"  class="container" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="300" data-sal-easing="ease-in-bounce">
 			<div class="row wow zoomIn" style="padding: 0%; padding-bottom: 20px; margin: 0%; display: inline">
 				<!-- <div class="col-md-4" style="padding: 0%; margin: 0%;">
 					<h2 class="wow zoomIn" style="padding-top: 40px; text-align: left">Profile</h2>
@@ -279,7 +279,7 @@
 
 			<hr style="clear: none; padding: 0%; margin: 0%;">
 
-			<div class="row wow fadeIn" style="padding-top: 50px; text-align: left;">
+			<div class="row" style="padding-top: 50px; text-align: left;">
 				<div class="col-md-3">
 					<h3>About me</h3>
 					<p>I recently graduated from highschool and am currently a student attending Waterloo University,
@@ -321,13 +321,14 @@
 			<div class="text-center">
 
 			</div>
-			<div>
+			<div style="padding-top: 40px;">
 				<img class="wow rubberBand" style="display: block; float: left; width: 10vw;"
-					src="view/images/lamp.png">
+					src="view/images/light.svg">
 				<img class="wow rubberBand" style="display: block; float: right; width: 10vw;"
-					src="view/images/soccer.png">
+					src="view/images/soccer.svg">
+					<!-- <i class="fas fa-futbol"></i> -->
 				<img class="wow rubberBand" style="display: block; margin-left: auto; margin-right: auto; width: 12vw;"
-					src="view/images/laptop.png">
+					src="view/images/laptop.svg">
 			</div>
 		</div>
 
@@ -350,7 +351,7 @@
 		<!-- <div class="overlayGradient">
 	</div> -->
 		<div id="projects" class="container-fluid overlayGradient" >
-			<div  class="container" data-sal-duration="1200" data-sal="fade" data-sal-delay="300" data-sal-easing="ease-in-bounce">
+			<div  class="container" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="300" data-sal-easing="ease-in-bounce">
 				<div style="background-color: white;" class="shadow">
 					<h2 style="padding-top:20px;">Projects</h2>
 					<p class="lead" style="padding-bottom:20px; color: #c28aff;">Some Cool Stuff I've Done<br />
