--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 		<a href="https://asimbhatia.me/"><img
 				style="width: 5vw; display: block; float: left; margin: 40px; z-index: 100; position: absolute;"
 				src="view/images/logoABWhiteTransparent.png"></a>
-				<div style="display: inline; z-index: 100; position: absolute; bottom: 40px; right: 40px;" class="resume-link"><a href="view/images/AsimResume10.pdf">Resum&eacute;</a></div>
+				<div style="display: inline; z-index: 100; position: absolute; bottom: 40px; right: 40px;" class="resume-link"><a href="view/images/AsimResume10.pdf">R&eacute;sum&eacute;</a></div>
 				<!-- transform: translateX(-50%); -->
 		<div class="overlay">
 			<div class="container" data-sal-duration="1200" data-sal="fade" data-sal-delay="300"
