--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 
 	<link rel="stylesheet" href="/dist/sal.css">
-	<!-- <meta charset="UTF-8" /> -->
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<!-- <meta http-equiv="X-UA-Compatible" content="ie=edge" /> -->
 	<!-- PONCHO top are suspects possibly or the one line below -->
 
@@ -203,10 +203,12 @@
 
 
 	<div id="top" class="jumbotron" data-src="/view/images/metro_animation.gif" data-position="center right">
-		<a href="https://asimbhatia.me/"><img
-				style="width: 5vw; display: block; float: left; margin: 40px; z-index: 100; position: absolute;"
-				src="view/images/logoABWhiteTransparent.png"></a>
+				<a href="https://asimbhatia.me/"><img style="width: 5vw; display: block; float: left; margin: 40px; z-index: 100; position: absolute;" src="view/images/logoABWhiteTransparent.png"></a>
 				<div style="display: inline; z-index: 100; position: absolute; bottom: 40px; right: 40px;" class="resume-link"><a href="view/images/AsimResume10.pdf">R&eacute;sum&eacute;</a></div>
+				<!-- <div class="scroll-down"><div class="glyphicon"></div><a href="#profile">&#8681;</a></div> -->
+				<a href="#profile" class="scroll-down">	
+					<span class="glyphicon glyphicon-chevron-down"></span>
+				</a>
 				<!-- transform: translateX(-50%); -->
 		<div class="overlay">
 			<div class="container" data-sal-duration="1200" data-sal="fade" data-sal-delay="300"
